padding to avoid cutting off last story

--- a/src/popup.css
+++ b/src/popup.css
@@ -484,7 +484,9 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
-  padding-bottom: 100px;
+}
+.panel-item.selected .story:last-child {
+  margin-bottom: 100px;
 }
 
 .story {
